Revert "add free floating scroll-button,"
This reverts commit b20d98e90d38abf6f79afada3b3ffd6d767b79d9.

--- a/index.html
+++ b/index.html
@@ -58,27 +58,25 @@
 	</nav>
 	<!-- End Navbar -->
 
-	<!-- FLOATING SCROLL BUTTON -->
-	<div class="d-none">
-		<a id="down-button" href="#" onclick="scrollToNextSection()">
-			<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
-			  <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-			  <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-			</svg>
-		</a>
-	</div>
-	<!-- END FLOATING SCROLL BUTTON -->
+
 
 	<!-- Main content -->
 	<div id="main" class="container-fluid px-3">
-		<section class="dummy-section"></section>
 		<!-- Landing section -->
 		<section id="landing" class="row min-vh-100 active-section">
 			<div id="landing-anchor"></div>
 			<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto ">
 				<div id="aboutme" class=" mt-5">
-
-
+					<!-- FLOATING SCROLL BUTTON -->
+					<div>
+						<a id="down-button" href="#" onclick="scrollToNextSection()">
+							<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+							  <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+							  <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+							</svg>
+						</a>
+					</div>
+					<!-- END FLOATING SCROLL BUTTON -->
 
 					<h2 class="">Hello, I'm Ben</h2>
 					<p>
