remove bg-dark from navbar, edit js script to remove bg-dark being added back when page scrolls up, add pl-3 to navbar-brand on xs screen sizes only

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 	<div id="top-anchor"></div>
 	<!-- Navbar -->
-	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top mb-5 ">
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top mb-5 ">
 		<div class="container-fluid px-0">
 			<div class="row w-100">
 				<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto d-flex">
-					<a class="navbar-brand " href="#">B<span class="d-none d-sm-inline">en</span>T<span class="d-none d-sm-inline">olang</span></a>
+					<a class="navbar-brand pl-3 pl-sm-0" href="#">B<span class="d-none d-sm-inline">en</span>T<span class="d-none d-sm-inline">olang</span></a>
 					<div class="ml-auto py-1">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
 						</button>
