add theme-dark css ruleset, add theme-dark class to footer, add theme-dark to navbar, remove when scrolled

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 	</div>
 	<!-- Footer section -->
-	<footer class="bg-dark py-3">
+	<footer class="theme-dark py-3">
 		<div class="text-center">
 			<p class="m-0"><span class="d-block d-md-inline">Capstone 1 - Developer Portfolio</span><span class="d-none d-md-inline px-3">|</span><span class="d-block mt-3 d-md-inline ">Zuitt Coding Bootcamp © 2023</span></p>
 			<p class="px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
