--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 						<div class="collapse navbar-collapse" id="navbarNav">
 							<ul class="navbar-nav ml-auto  ">
 								<li class="nav-item active">
-									<a class="nav-link" href="#landing-anchor">Home <span class="sr-only">(current)</span></a>
+									<a class="nav-link" href="#landing">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#projects-anchor">Projects</a>
+									<a class="nav-link" href="#projects">Projects</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#tools-anchor">Tools</a>
+									<a class="nav-link" href="#tools">Tools</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#contacts-anchor">Contact</a>
+									<a class="nav-link" href="#contact">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -64,7 +64,6 @@
 	<div id="main" class="container-fluid px-3">
 		<!-- Landing section -->
 		<section id="landing" class="row min-vh-100 active-section">
-			<div id="landing-anchor"></div>
 			<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto ">
 				<div id="aboutme" class=" mt-5">
 					<!-- FLOATING SCROLL BUTTON -->
@@ -98,7 +97,6 @@
 
 		<!-- Projects Section -->
 		<section id="projects" class="row mt-5 min-vh-100">
-			<div class="" id="projects-anchor"></div>
 			<div class="col-12 mb-1 px-0">
 				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Projects</h2>
 			</div>
@@ -155,7 +153,6 @@
 
 		<!-- Tools Section -->
 		<section id="tools" class="row mt-5 " >
-			<div class="" id="tools-anchor"></div>
 			<div class="col-12 mb-1 px-0">
 				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Tools</h2>
 			</div>
@@ -185,7 +182,6 @@
 
 		<!-- Contact section -->
 		<section id="contact" class="row  mt-5 flex-column ">
-			<div class="" id="contacts-anchor"></div>
 			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
 				<h2 class="px-0" class="text-xl-center">Get In Touch</h2>
 				<form class=" py-2">
