fix navbar background-color, add theme-dark class at html element

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div id="top-anchor"></div>
 	<!-- Navbar -->
-	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top mb-5 ">
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark theme-dark fixed-top mb-5 ">
 		<div class="container-fluid px-0">
 			<div class="row w-100">
 				<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto d-flex">
