add landing-with-bg section, set min-height to 100vh change initial active-section to landing-with-bg, edit scrollToNextSection fn to reset to landing-with-bg

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 	<!-- Main content -->
 	<div id="main" class="container-fluid px-3">
 		<!-- Landing section -->
-		<section id="landing" class="row min-vh-100 active-section">
+		<section id="landing-with-bg" class="active-section">
+			
+		</section>
+		<section id="landing" class="row min-vh-100 ">
 			<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto ">
 				<div id="aboutme" class=" mt-5">
 					<!-- FLOATING SCROLL BUTTON -->
