--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 									<a class="nav-link" href="#landing-with-bg">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
+									<a class="nav-link" href="#landing">AboutMe</a>
+								</li>
+								<li class="nav-item">
 									<a class="nav-link" href="#projects">Projects</a>
 								</li>
 								<li class="nav-item">
