--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						<div class="collapse navbar-collapse" id="navbarNav">
 							<ul class="navbar-nav ml-auto  ">
 								<li class="nav-item active">
-									<a class="nav-link" href="#landing-with-bg">Home <span class="sr-only">(current)</span></a>
+									<a class="nav-link" href="#landing">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#landing">AboutMe</a>
+									<a class="nav-link d-none" href="#landing">AboutMe</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="#projects">Projects</a>
@@ -66,10 +66,10 @@
 	<!-- Main content -->
 	<div id="main" class="container-fluid px-3">
 		<!-- Landing section -->
-		<section id="landing-with-bg" class="active-section">
+		<section id="landing-with-bg" class=" d-none">
 			
 		</section>
-		<section id="landing" class="row min-vh-100 ">
+		<section id="landing" class="row min-vh-100 active-section">
 			<div class="col col-md-10 col-lg-8 col-xl-6 mx-auto ">
 				<div id="aboutme" class=" mt-5">
 					<!-- FLOATING SCROLL BUTTON -->
