--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
 					<div class="row">
 						<div class="col-12 col-md-6 form-group">
 							<label for="name">Your Full Name</label>
-							<input placeholder="Full Name" type="text" class="form-control" id="name" aria-describedby="name">
+							<input placeholder="Full Name" type="text" class="form-control" id="name" aria-describedby="name" name="name">
 						</div>
 						<div class="col-12 col-md-6 form-group">
 							<label for="email">Your Email </label>
-							<input placeholder="Email Address" type="email" class="form-control" id="email" aria-describedby="name">
+							<input placeholder="Email Address" type="email" class="form-control" id="email" aria-describedby="name" name="email">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label for="message">Your Message</label>
-						<textarea class="form-control" id="message" rows="5"></textarea>
+						<textarea class="form-control" id="message" rows="5" name="message"></textarea>
 					</div>
 					<button id="contact-btn" type="submit" class="w-25 btn btn-light btn-lg"  data-toggle="modal" data-target="#contact-modal">Send</button>
 
