edit links in project section to open in new tab

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 						<div class="card-body ">
 								<div>
 									<h3 class="card-title text-dark text-center">
-										<a class="text-dark" href="https://e-commerce-app-sooty.vercel.app/">E-Commerce App</a>
-										<a href="https://e-commerce-app-sooty.vercel.app/"><span class="badge badge-primary ml-3">Demo</span></a>
-										<a href="https://gitlab.com/bentol.webdev/e-commerce-app">
+										<a class="text-dark" href="https://e-commerce-app-sooty.vercel.app/" target="_blank">E-Commerce App</a>
+										<a href="https://e-commerce-app-sooty.vercel.app/" target="_blank"><span class="badge badge-primary ml-3">Demo</span></a>
+										<a href="https://gitlab.com/bentol.webdev/e-commerce-app" target="_blank">
 										<span class="badge badge-warning ml-3">
 										Gitlab</span></a>
 									</h3> 
