edit E-commerce API project description

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 						</a>
 					</div>
 					<div class="project-description px-2 pt-2">
-						<p class="text-justify">This project demonstrates the use of Express.js and MongoDB to create a Backend for an E-Commerce App. Mongoose was used in creating the data models. JSON Web Token was used to authenticate users and admins. Important features of the App include User Registration & Login, User Shopping cart and checkout functionality and Product Review creation. Features that are available only to Admin users include Production creation and updating, and User administration. This project is a capstone project for Zuitt Web Development Bootcamp.  </p>
+						<p class="text-justify">
+							This project showcases the use of Express.js and MongoDB to create an E-Commerce App Backend, utilizing Mongoose for data models. User authentication and authorization are implemented using JSON Web Tokens. Key features of the app include User Registration & Login, Shopping cart functionality, Checkout, and Product Reviews. Exclusive to Admin users are features like Product creation and updating, as well as User administration. This project serves as the capstone project for the Zuitt Web Development Bootcamp.  </p>
 					</div>
 					
 				</div>
