--- a/index.html
+++ b/index.html
@@ -209,25 +209,59 @@
 				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Tools</h2>
 			</div>
 			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 ">
-				<h3 class="">Core Tools</h3>
-				<img src="images/logo-html5.png"/>
-				<img src="images/logo-css3.png"/>   
-				<img src="images/logo-javascript.png"/>
+				<h3 class=" mt-5 text-center">Tech Stack</h3>
+				<div class="d-flex flex-wrap justify-content-center">
+					<div >
+						<img id="logo-react" src="./images/logo-react.png" alt="react icon">
+						<p class="text-center" for="logo-react">React</p>
+					</div>
+					<div >
+						<img id="logo-express" src="./images/logo-expressjs.png" alt="express icon">
+						<p class="text-center" for="logo-express">Express.js</p>
+					</div>
+					<div >
+						<img id="logo-mongodb" src="./images/logo-mongodb.png" alt="mongodb icon">
+						<p class="text-center" for="logo-mongodb">MongoDB</p>
+					</div>
+					<div>
+						<img id="logo-node" src="./images/logo-nodejs.png" style="height: 128px;" alt="node icon">
+						<p class="text-center" for="logo-node">Node.js</p>
+					</div>
+				</div>
 			</div>
-			<div class="col-12 col-md-5  col-lg-4 col-xl-3 ">
-				<h3 class="">Database</h3>
-				<img src="images/logo-mongodb.png"/>
+			<div class="col-12 col-md-5 col-lg-4 col-xl-3">
+				<h3 class=" mt-5 text-center">Core Tools</h3>
+				<div class="d-flex flex-wrap justify-content-center">
+					<div >
+						<img id="logo-react" src="images/logo-html5.png"/>
+						<p class="text-center" for="logo-react">HTML5</p>
+					</div>
+					<div >
+						<img id="logo-css3" src="images/logo-css3.png"/>   
+						<p class="text-center" for="logo-css3">CSS3</p>
+					</div>
+					<div >
+						<img id="logo-javascript" src="images/logo-javascript.png"/>
+						<p class="text-center" for="logo-javascript">Javascript</p>
+					</div>
+				</div>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 ">
-				<h3 class="">Version Control and Collaboration</h3>
-				<img src="images/logo-git.png"/>
-				<img src="images/logo-gitlab-ci-cd.png"/>
-				<img src="images/logo-github.png"/>
-			</div>
-			<div class="col-12 col-md-5  col-lg-4 col-xl-3 ">
-				<h3 class="">Servers and Deployment</h3>
-				<img src="images/logo-expressjs.png"/>
-				<img src="images/logo-heroku.png"/>
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3">
+				<h3 class=" mt-5 text-center">Version Control and Collaboration</h3>
+				<div class="d-flex flex-wrap justify-content-center">
+					<div >
+						<img src="images/logo-git.png"/>
+						<p class="text-center">Git</p>
+					</div>
+					<div >
+						<img src="images/logo-gitlab-ci-cd.png"/>  
+						<p class="text-center">Gitlab</p>
+					</div>
+					<div >
+						<img src="images/logo-github.png"/>
+						<p class="text-center">Github</p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- End Tools Section -->
