--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 						<div class="collapse navbar-collapse" id="navbarNav">
 							<ul class="navbar-nav ml-auto  ">
 								<li class="nav-item active">
-									<a class="nav-link" href="#landing">Home <span class="sr-only">(current)</span></a>
+									<a class="nav-link" href="#landing" onclick="setCurrentSection('landing')">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link d-none" href="#landing">AboutMe</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#projects">Projects</a>
+									<a class="nav-link" href="#projects" onclick="setCurrentSection('projects')">Projects</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#tools">Tools</a>
+									<a class="nav-link" href="#tools" onclick="setCurrentSection('tools')">Tools</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#contact">Contact</a>
+									<a class="nav-link" href="#contact" onclick="setCurrentSection('contact')">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -305,7 +305,15 @@
 	<!-- Footer section -->
 	<!-- End Main content -->
 
+	<script>
+		function setCurrentSection(id) {
+			currentSection.classList.remove("active-section");
+			currentSection = document.getElementById(id);
+			currentSection.classList.add("active-section");
 
+			nextSection = currentSection.nextElementSibling;
+		}
+	</script>
 	<script type="text/javascript" src="./script.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
